--- a/css/styles.css
+++ b/css/styles.css
@@ -122,3 +122,27 @@
     left: 130px;
     
   }
+
+@media screen and (max-width: 800px){
+    .img-angry{
+      height: 10%;
+      left: 60px;
+      top:560px;
+    }
+    .img-love{
+      height: 10%;
+      right: 60px;
+      top:560px;
+    }
+
+  .img-happy{
+    height: 10%;
+    right: 50px;
+    top:280px;
+  }
+  .img-sad{
+    height: 10%;
+    left: 50px;
+    top:280px;
+  }
+  }
