--- a/css/styles.css
+++ b/css/styles.css
@@ -146,3 +146,29 @@
     top:280px;
  }
 }
+
+ @media screen and (max-width: 400px) {
+     .img-angry {
+       height: 10%;
+       left: 60px;
+       top: 650px;
+     }
+
+     .img-love {
+       height: 10%;
+       right: 60px;
+       top: 650px;
+     }
+
+     .img-happy {
+       height: 10%;
+       right: 50px;
+       top: 300px;
+     }
+
+     .img-sad {
+       height: 10%;
+       left: 50px;
+       top: 300px;
+     }
+   }
